# notifications

./: .gitignore  Dockerfile  README.md  pyproject.toml  railway.toml
src/notifications/: __init__.py  channels.py  config.py  database.py  main.py  models.py  routes.py
tests/: __init__.py
tests/integration/: test_api.py
tests/unit/: test_channels.py  test_models.py
